--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Imgur - Discover the magic of the internet</title>
-    <meta name="description" content="Discover the world's most entertaining community. Join millions sharing memes, GIFs, and creativity daily." />
-    <meta name="author" content="Imgur" />
+    <title>my.pic - Share Your Images</title>
+    <meta name="description" content="Share and discover amazing images with my.pic. Upload, organize, and share your favorite pictures with the world." />
+    <meta name="author" content="my.pic" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="058599df-d110-4227-89b7-3146bb3427fe" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="my.pic - Share Your Images" />
+    <meta property="og:description" content="Share and discover amazing images with my.pic. Upload, organize, and share your favorite pictures with the world." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@mypic" />
+    <meta name="twitter:image" content="/placeholder.svg" />
   </head>
 
   <body>
